Add main and explore section html structure

--- a/index.html
+++ b/index.html
@@ -44,5 +44,43 @@
             </div>
         </div>
     </header>
+
+    <!-- Main Section -->
+    <main>
+        <div class="container">
+            <h3>T-Shirt / Tops</h3>
+            <div class="main_heading">
+                <h1>
+                    <span>Summer</span>
+                    <span>Value Pack</span>
+                </h1>
+            </div>
+            <h3>cool / colorful / comfy</h3>
+
+            <button class="main_show_now">Shop Now</button>
+        </div>
+    </main>
+
+    <!-- Explore Item Section -->
+    <section id="explore_item">
+        <div class="container">
+            <div>
+                <h5>Low Price</h5>
+                <h2>High Coziness</h2>
+                <h5>UPTO 50% OFF</h5>
+
+                <!-- Explore Items link -->
+                <a href="">Explore items</a>
+            </div>
+            <div>
+                <h5>Beyoung Presents</h5>
+                <h2>Breezy Summer Style</h2>
+                <h5>UPTO 50% OFF</h5>
+
+                <!-- Explore Items link -->
+                <a href="">Explore items</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
