Add New arrival html code

--- a/index.html
+++ b/index.html
@@ -82,5 +82,41 @@
             </div>
         </div>
     </section>
+
+    <!-- New Arrival -->
+    <section id="new_arrival">
+        <div class="container">
+            <div class="arrival_heading_wrap">
+                <span class="heading_side_bar"></span>
+                <h2>New Arrival</h2>
+            </div>
+            <div class="new_arrival_items_wrap">
+                <div class="left_arrow">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </div>
+                <div class="items_wrapper">
+                    <div>
+                        <img src="./img/New_arrival_item1.png" alt="">
+                        <p>Knitted Joggers</p>
+                    </div>
+                    <div>
+                        <img src="./img/New_arrival_item2.png" alt="">
+                        <p>Full Sleeve</p>
+                    </div>
+                    <div>
+                        <img src="./img/New_arrival_item3.png" alt="">
+                        <p>Active T-Shirt</p>
+                    </div>
+                    <div>
+                        <img src="./img/New_arrival_item4.png" alt="">
+                        <p>Urban Shirts</p>
+                    </div>
+                </div>
+                <div class="right_arrow">
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
