Add best saving zone html code

--- a/index.html
+++ b/index.html
@@ -118,5 +118,78 @@
             </div>
         </div>
     </section>
+
+    <!-- Big Savings Zone -->
+    <section id="big_saving_zone">
+        <div class="container">
+            <div class="saving_zone_wrapper">
+                <div>
+                    <h3>Hawaiian Shirts</h3>
+                    <p>
+                        <spn>Dress up in summer vibe</spn>
+                        <span>UPTO 50% OFF</span>
+                    </p>
+                    <div>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <button>
+                        Shop now
+                    </button>
+                </div>
+                <div>
+                    <h3>Printed T-Shirt</h3>
+                    <p>
+                        <span>New Designs Every Week</span>
+                        <span>UPTO 50% OFF</span>
+                    </p>
+                    <div>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <button>
+                        Shop now
+                    </button>
+                </div>
+                <div>
+                    <h3>Cargo Joggers</h3>
+                    <p>
+                        <span>Move with style & comfort</span>
+                        <span>UPTO 50% OFF</span>
+                    </p>
+                    <div>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <button>
+                        Shop now
+                    </button> 
+                </div>
+                <div>
+                    <h3>Urban Shirts</h3>
+                    <p>
+                        <span>Live In Confort</span>
+                        <span>UPTO 50% OFF</span>
+                    </p>
+                    <div>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <button>
+                        Shop now
+                    </button>
+                </div>
+                <div>
+                    <h3>Oversized T-Shirts</h3>
+                    <p>
+                        <span>Street Style Icon</span>
+                        <span>UPTO 50% OFF</span>
+                    </p>
+                    <div>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <button>
+                        Shop now
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
