insert fastion better html structure code

--- a/index.html
+++ b/index.html
@@ -1,195 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <!-- Header -->
     <header>
-        <div class="container">
-            <div class="header_wrapper">
-                <div class="logo">
-                    <img src="./img/Logo.png" alt="">
-                </div>
-                <div class="menu">
-                    <ul>
-                        <li><a href="">Shop</a></li>
-                        <li><a href="">Men</a></li>
-                        <li><a href="">Women</a></li>
-                        <li><a href="">Combos</a></li>
-                        <li><a href="">Joggers</a></li>
-                    </ul>
-                    <div class="search-box">
-                        <form action="">
-                            <input type="text" placeholder="Search..">
-                            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        </form>
-                    </div>
-                </div>
-                <div class="header-right">
-                    <div class="love-icon">
-                        <i class="fa-regular fa-heart"></i>
-                    </div>
-                    <div class="sing-option">
-                        <i class="fa-regular fa-user"></i>
-                    </div>
-                    <div class="card-option">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="header_wrapper">
+          <div class="logo">
+            <img src="./img/Logo.png" alt="" />
+          </div>
+          <div class="menu">
+            <ul>
+              <li><a href="">Shop</a></li>
+              <li><a href="">Men</a></li>
+              <li><a href="">Women</a></li>
+              <li><a href="">Combos</a></li>
+              <li><a href="">Joggers</a></li>
+            </ul>
+            <div class="search-box">
+              <form action="">
+                <input type="text" placeholder="Search.." />
+                <button type="submit">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
+              </form>
             </div>
+          </div>
+          <div class="header-right">
+            <div class="love-icon">
+              <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class="sing-option">
+              <i class="fa-regular fa-user"></i>
+            </div>
+            <div class="card-option">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
+          </div>
         </div>
+      </div>
     </header>
 
     <!-- Main Section -->
     <main>
-        <div class="container">
-            <h3>T-Shirt / Tops</h3>
-            <div class="main_heading">
-                <h1>
-                    <span>Summer</span>
-                    <span>Value Pack</span>
-                </h1>
-            </div>
-            <h3>cool / colorful / comfy</h3>
-
-            <button class="main_show_now">Shop Now</button>
+      <div class="container">
+        <h3>T-Shirt / Tops</h3>
+        <div class="main_heading">
+          <h1>
+            <span>Summer</span>
+            <span>Value Pack</span>
+          </h1>
         </div>
+        <h3>cool / colorful / comfy</h3>
+
+        <button class="main_show_now">Shop Now</button>
+      </div>
     </main>
 
     <!-- Explore Item Section -->
     <section id="explore_item">
-        <div class="container">
-            <div>
-                <h5>Low Price</h5>
-                <h2>High Coziness</h2>
-                <h5>UPTO 50% OFF</h5>
+      <div class="container">
+        <div>
+          <h5>Low Price</h5>
+          <h2>High Coziness</h2>
+          <h5>UPTO 50% OFF</h5>
 
-                <!-- Explore Items link -->
-                <a href="">Explore items</a>
-            </div>
-            <div>
-                <h5>Beyoung Presents</h5>
-                <h2>Breezy Summer Style</h2>
-                <h5>UPTO 50% OFF</h5>
-
-                <!-- Explore Items link -->
-                <a href="">Explore items</a>
-            </div>
+          <!-- Explore Items link -->
+          <a href="">Explore items</a>
         </div>
+        <div>
+          <h5>Beyoung Presents</h5>
+          <h2>Breezy Summer Style</h2>
+          <h5>UPTO 50% OFF</h5>
+
+          <!-- Explore Items link -->
+          <a href="">Explore items</a>
+        </div>
+      </div>
     </section>
 
     <!-- New Arrival -->
     <section id="new_arrival">
-        <div class="container">
-            <div class="arrival_heading_wrap">
-                <span class="heading_side_bar"></span>
-                <h2>New Arrival</h2>
-            </div>
-            <div class="new_arrival_items_wrap">
-                <div class="left_arrow">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </div>
-                <div class="items_wrapper">
-                    <div>
-                        <img src="./img/New_arrival_item1.png" alt="">
-                        <p>Knitted Joggers</p>
-                    </div>
-                    <div>
-                        <img src="./img/New_arrival_item2.png" alt="">
-                        <p>Full Sleeve</p>
-                    </div>
-                    <div>
-                        <img src="./img/New_arrival_item3.png" alt="">
-                        <p>Active T-Shirt</p>
-                    </div>
-                    <div>
-                        <img src="./img/New_arrival_item4.png" alt="">
-                        <p>Urban Shirts</p>
-                    </div>
-                </div>
-                <div class="right_arrow">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </div>
-            </div>
+      <div class="container">
+        <div class="arrival_heading_wrap">
+          <span class="heading_side_bar"></span>
+          <h2>New Arrival</h2>
         </div>
+        <div class="new_arrival_items_wrap">
+          <div class="left_arrow">
+            <i class="fa-solid fa-arrow-left"></i>
+          </div>
+          <div class="items_wrapper">
+            <div>
+              <img src="./img/New_arrival_item1.png" alt="" />
+              <p>Knitted Joggers</p>
+            </div>
+            <div>
+              <img src="./img/New_arrival_item2.png" alt="" />
+              <p>Full Sleeve</p>
+            </div>
+            <div>
+              <img src="./img/New_arrival_item3.png" alt="" />
+              <p>Active T-Shirt</p>
+            </div>
+            <div>
+              <img src="./img/New_arrival_item4.png" alt="" />
+              <p>Urban Shirts</p>
+            </div>
+          </div>
+          <div class="right_arrow">
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Big Savings Zone -->
     <section id="big_saving_zone">
-        <div class="container">
-            <div class="saving_zone_wrapper">
-                <div>
-                    <h3>Hawaiian Shirts</h3>
-                    <p>
-                        <spn>Dress up in summer vibe</spn>
-                        <span>UPTO 50% OFF</span>
-                    </p>
-                    <div>
-                        <i class="fa-solid fa-arrow-down"></i>
-                    </div>
-                    <button>
-                        Shop now
-                    </button>
-                </div>
-                <div>
-                    <h3>Printed T-Shirt</h3>
-                    <p>
-                        <span>New Designs Every Week</span>
-                        <span>UPTO 50% OFF</span>
-                    </p>
-                    <div>
-                        <i class="fa-solid fa-arrow-down"></i>
-                    </div>
-                    <button>
-                        Shop now
-                    </button>
-                </div>
-                <div>
-                    <h3>Cargo Joggers</h3>
-                    <p>
-                        <span>Move with style & comfort</span>
-                        <span>UPTO 50% OFF</span>
-                    </p>
-                    <div>
-                        <i class="fa-solid fa-arrow-down"></i>
-                    </div>
-                    <button>
-                        Shop now
-                    </button> 
-                </div>
-                <div>
-                    <h3>Urban Shirts</h3>
-                    <p>
-                        <span>Live In Confort</span>
-                        <span>UPTO 50% OFF</span>
-                    </p>
-                    <div>
-                        <i class="fa-solid fa-arrow-down"></i>
-                    </div>
-                    <button>
-                        Shop now
-                    </button>
-                </div>
-                <div>
-                    <h3>Oversized T-Shirts</h3>
-                    <p>
-                        <span>Street Style Icon</span>
-                        <span>UPTO 50% OFF</span>
-                    </p>
-                    <div>
-                        <i class="fa-solid fa-arrow-down"></i>
-                    </div>
-                    <button>
-                        Shop now
-                    </button>
-                </div>
+      <div class="container">
+        <div class="saving_zone_wrapper">
+          <div>
+            <h3>Hawaiian Shirts</h3>
+            <p>
+              <spn>Dress up in summer vibe</spn>
+              <span>UPTO 50% OFF</span>
+            </p>
+            <div>
+              <i class="fa-solid fa-arrow-down"></i>
             </div>
+            <button>Shop now</button>
+          </div>
+          <div>
+            <h3>Printed T-Shirt</h3>
+            <p>
+              <span>New Designs Every Week</span>
+              <span>UPTO 50% OFF</span>
+            </p>
+            <div>
+              <i class="fa-solid fa-arrow-down"></i>
+            </div>
+            <button>Shop now</button>
+          </div>
+          <div>
+            <h3>Cargo Joggers</h3>
+            <p>
+              <span>Move with style & comfort</span>
+              <span>UPTO 50% OFF</span>
+            </p>
+            <div>
+              <i class="fa-solid fa-arrow-down"></i>
+            </div>
+            <button>Shop now</button>
+          </div>
+          <div>
+            <h3>Urban Shirts</h3>
+            <p>
+              <span>Live In Confort</span>
+              <span>UPTO 50% OFF</span>
+            </p>
+            <div>
+              <i class="fa-solid fa-arrow-down"></i>
+            </div>
+            <button>Shop now</button>
+          </div>
+          <div>
+            <h3>Oversized T-Shirts</h3>
+            <p>
+              <span>Street Style Icon</span>
+              <span>UPTO 50% OFF</span>
+            </p>
+            <div>
+              <i class="fa-solid fa-arrow-down"></i>
+            </div>
+            <button>Shop now</button>
+          </div>
         </div>
+      </div>
     </section>
-</body>
+
+    <!-- FASHION BETTER -->
+    <section class="fastion_better">
+      <div class="container">
+        <div class="fastion_better_wrapper">
+          <div>
+            <h2>WE MADE YOUR EVERYDAY FASHION BETTER!</h2>
+            <p>
+              In our journey to improve everyday fashion, euphoria presents
+              EVERYDAY wear range - Comfortable & Affordable fashion 24/7
+            </p>
+            <button class="shop_now">
+                Shop Now
+            </button>
+          </div>
+          <div>
+            <img src="./img/Fastion-better-img1.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    
+  </body>
 </html>
