insert category for man html code

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </section>
 
     <!-- FASHION BETTER -->
-    <section class="fastion_better">
+    <section id="fastion_better">
       <div class="container">
         <div class="fastion_better_wrapper">
           <div>
@@ -197,9 +197,7 @@
               In our journey to improve everyday fashion, euphoria presents
               EVERYDAY wear range - Comfortable & Affordable fashion 24/7
             </p>
-            <button class="shop_now">
-                Shop Now
-            </button>
+            <button class="shop_now">Shop Now</button>
           </div>
           <div>
             <img src="./img/Fastion-better-img1.png" alt="" />
@@ -207,6 +205,125 @@
         </div>
       </div>
     </section>
-    
+
+    <!-- Categories For Man -->
+    <section id="categories_for_man">
+      <div class="container">
+        <div class="wrapper">
+          
+          <!-- Item 1 -->
+          <div class="item">
+            <div class="img_wrap">
+              <img src="./img/category_for_man-img1.png" alt="" />
+            </div>
+            <div class="arrow_wrap">
+              <span>Shirts</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="item">
+            <div class="img_wrap">
+              <img src="./img/category_for_man-img2.png" alt="" />
+            </div>
+            <div class="arrow_wrap">
+              <span>Printed T-Shirts</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="item">
+            <div class="img_wrap">
+              <img src="./img/category_for_man-img3.png" alt="" />
+            </div>
+            <div class="arrow_wrap">
+              <span>Plain T-Shirt</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 4 -->
+          <div class="item">
+            <div class="img_wrap">
+              <img src="./img/category_for_man-img4.png" alt="" />
+            </div>
+            <div class="arrow_wrap">
+              <span>Polo T-Shirt</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 5 -->
+          <div class="item">
+            <div class="img_wrap">
+              <img src="./img/category_for_man-img4.png" alt="" />
+            </div>
+            <div class="arrow_wrap">
+              <span>Hoodies & Sweetshirt</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 6 -->
+          <div class="item">
+            <div class="img_wrap">
+              <img src="./img/category_for_man-img6.png" alt="" />
+            </div>
+            <div class="arrow_wrap">
+              <span>Jeans</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 7 -->
+          <div class="item">
+            <div class="img_wrap">
+              <img src="./img/category_for_man-img7.png" alt="" />
+            </div>
+            <div class="arrow_wrap">
+              <span>Activewear</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 8 -->
+          <div class="item">
+            <div class="img_wrap">
+              <img src="./img/category_for_man-img8.png" alt="" />
+            </div>
+            <div class="arrow_wrap">
+              <span>Boxers</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
