Add categories for women section html

--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
     <section id="categories_for_man">
       <div class="container">
         <div class="wrapper">
-          
           <!-- Item 1 -->
           <div class="item">
             <div class="img_wrap">
@@ -314,6 +313,61 @@
             <div class="img_wrap">
               <img src="./img/category_for_man-img8.png" alt="" />
             </div>
+            <div class="arrow_wrap">
+              <span>Boxers</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Categories For Women -->
+    <section class="categories_for_women">
+      <div class="container">
+        <div class="wrapper">
+          <!-- Item 1 -->
+          <div class="item">
+            <img src="./img/categories_for_wemen-img1.png" alt="" />
+            <div class="arrow_wrap">
+              <span>Hoodies & Sweetshirt</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="item">
+            <img src="./img/categories_for_women-img2.png" alt="" />
+            <div class="arrow_wrap">
+              <span>Coats & Parkas</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="item">
+            <img src="./img/categories_for_women-img3.png" alt="" />
+            <div class="arrow_wrap">
+              <span>Tees & T-Shirt</span>
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </div>
+            <a href="">Explore Now!</a>
+          </div>
+
+          <!-- Item 4 -->
+          <div class="item">
+            <img src="./img/categories_for_women-img4.png" alt="" />
             <div class="arrow_wrap">
               <span>Boxers</span>
               <span>
