Top band deal html add and img export

--- a/index.html
+++ b/index.html
@@ -379,5 +379,32 @@
         </div>
       </div>
     </section>
+
+    <!-- Top Band Deal -->
+    <section id="top_band_deal">
+      <div class="container">
+        <div class="wrapper">
+          <h2>Top Brands Deal</h2>
+          <p>Up To <span>60%</span> off on brands</p>
+          <div class="drand_logo">
+            <div class="logo_wrap">
+              <img src="./img/top_band-logo1.png" alt="">
+            </div>
+            <div class="logo_wrap">
+              <img src="./img/top_band-logo2.png" alt="">
+            </div>
+            <div class="logo_wrap">
+              <img src="./img/top_band-logo3.png" alt="">
+            </div>
+            <div class="logo_wrap">
+              <img src="./img/top_band-logo4.png" alt="">
+            </div>
+            <div class="logo_wrap">
+              <img src="./img/top_band-logo5.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
